Revision history for Thrift-API-HiveClient2

{{$NEXT}}
        Verbose type checks.
        Adding support for delegation token authentication (ashwin konale)
        Don’t try to close undefined transport during global destruction (Dave Cardwel)
        Cleanup dead code.

0.021   2016-01-17
        Version up to solve cpan conflict after rejection

0.020   2016-01-13
        Removed .iml file
        Updated build dep for rpmbuild and older perl versions
        Added [GithubMeta] to dist.ini, so repo will appear in dist metadata
        Added link to github repo in the doc
        Moved socket timeout declaration
        Fixed column names filling
        Workaround for Thrift error messages (commented out, sigh)
        Added POD as README.md

0.019   2015-10-01
        Added get_tables method, outputs a list of tables with some details
        Added fetch_hashref, which returns a resultset keyed on column names

0.018   2015-09-30
        Added get_columns method, giving complete info on a table's columns

0.017   2015-05-14
        Merged burak's 45a06bba - Guard isa() checks with blessed().
        Tiny doc fix re/ SASL+PLAIN: canonuser, not user

0.016   2014-12-10
        PruneCruft didn't remove the files in the build dir, fixing that

0.015   2014-12-10 
        Other SASL mechanisms can be used, passed directly to the
        Authen::SASL object

0.014   2014-10-29
        Added Kerberos support

0.013   2014-02-10
        Fixed If hive returns errors, the values can be undef (Burak Gürsoy)

0.012   2013-08-21
0.011   2013-08-21
        Fixed CDH 4.3.0 bug (thanks to Stephen Sprague and Oleksiy Kovyrin)
        Added UTF-8 configuration comments

0.010   2013-07-11
        Fixed fetch() behaviour due to hasMoreRows bug

0.009   2013-07-10
        Fixed bad error message

0.008   2013-07-10
        Added default timeout of 1h
        Die in case the server returns an error in execute()

0.007   2013-07-01
        Removed more useless tests
