@@ -522,6 +522,7 @@ __END__
 
 =pod
 
+=encoding utf8
 
 =head1 METHODS
 
